--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.19.1",
+    "@next/eslint-plugin-next": "^13.2.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
